- Fixed bonuses incorrectly being added twice to cyberlimbs.
- Fixed cyberware improperly being allowed to be flagged as prototype transhuman. Existing cyberware with this flag will be reverted to false.
- Unified behaviour of gear purchasing for vehicles between create and career mode. Ensures that black market pipeline is properly respected and that ammunition objects can be stacked. 

Data Changes:
- Removed extraneous Magic Sense quality. Closes #4021
- Added support to the SR Missions 1.4 Rules customdata file for the ruling that vehicles without defined sensor functions receive them according to the rating of the sensor array. Closes #2206
- Fixed incorrect name of the aerodynamic molotov cocktail.
- Added conditions to taking the Witness My Hate quality.
- Added metavariant stats for insect spirits.
- Added customdata rule to have shapeshifter initative bonuses apply as the default metatype initiative value instead of a bonus. 
- Added a selectskill prompt to the Enthralling Performance adept power.
- Updated shift power to the proper page reference. 
- Adepts and Mystic Adepts now always qualify for powers from the Undecided Way, irrespective of Art choices. 
- Converted Shapeshifter Initiaitve to work as the base mode by default instead of being a bonus. Added a new customdata rule to preserve current behaviour.
- Fixed a typo in the Amphora Mite critter's powers.
- Fixed incorrect cyberware names for the War Horse and War Dolphin critters.
- Added missing grenade 'weapons' from Kill Code for the Dousher, DumDum, COS and Fuzzy Boom Boom grenades. Closes #4031
- Fixed EVO/Yamatetsu Naval Technologies Rampart not having Capacity to install modifications per RAW for shields.
- The Cyberfinger (Injector), Injector Pen can now add drugs and toxins as children. 
- Armor Auto-Injectors can properly add Drugs and Toxins as children.
- Added mod categories for armor mods to properly support black market pipelines.